[package]
name = "botchi_game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Performance",
    "KeyboardEvent",
    "EventTarget",
    "MouseEvent",
    "PointerEvent",
] }